--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -9,32 +9,13 @@ html {
 }
 
 body {
-    margin: 0;
-    padding: 0;
+    margin: 20px;
+    padding: 20px;
     font-family: 'Poppins', sans-serif;
+    font-size: 16px;
     line-height: 1.3;
     
 
-    #content {
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        grid-auto-rows: 100px;
-        grid-auto-flow: column;
-        grid-row-gap: 10px;
-        grid-column-gap: 10px;
-        grid-gap: 10px;
-        margin: 0 auto;
-    }
-    
-    #content div {
-        background: #c5f07f;
-        /*   padding: 30px; */
-    }
-    
-    #content div:nth-child(even) {
-        background: #777;
-        /*   padding: 30px; */
-    }
     
     .nav {
         display: flex;
@@ -44,34 +25,34 @@ body {
         left: 0;
         width: 100%;
         background: white;
-        /*   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4); */
-        /*   z-index: 10; */
+
     }
     .nav-list {
         display: flex;
-        margin-right: 1rem;
+        margin: 0 20px 0 20px 0;
         list-style: none;
+    }
+
+    a:link {
+        text-decoration: underline;
+    }
+    a:hover {
         text-decoration: none;
     }
+
     
-    @media (max-width: 28.75em) {
-        .nav {
-        justify-content: center;
-        }
-    
-        .nav-list {
-        margin: 0 1rem;
-        }
-    }
     
     .nav-list a {
         /*   display: block; */
-        font-size: 1.3rem;
+        font-size: 1.2rem;
         padding: 1rem;
+        text-decoration: none;
+        color: black;
     }
     
     .nav-list a:hover {
         background: var(--main-blue);
+        cursor: pointer;
     }
     
     #welcome-section {
@@ -81,70 +62,95 @@ body {
         align-items: left;
         width: 100%;
         height: 100vh;
-        padding: 4rem;
+        margin-top: 3rem;
+        // padding: 1rem;
+        font-size: 1.75rem;
+    }
+
+    #about {
+        align-items: left;
+        width: 100%;
+        height: 100vh;
+        margin-top: 1rem;
+        padding-top: 6rem;
+    }
+
+
+    #projects {
+        width: 100%;
+        padding-top: 6rem;
     }
     
-    .blank {
-        grid-column: 1 / 7;
-        grid-row: 1 / 7;
-        text-align: right;
-        font-size: 4rem;
-        margin-top: 100px;
-        margin-right: 30px;
-        padding-top: 60px;
+    .header {
+        display: flex;
+        margin-right: 4rem;
+        width: 100%;
+        font-size: 3.5rem;
+        font-style: normal;
+        font-weight: 400;
+    }
+
+    .section-heading {
+        font-size: 1.75rem;
+        font-style: normal;
+        font-weight: 400;
+    }
+
+    .row {
+        display: inline-flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .card {
+        width: 100%;
+        justify-content: left;
+        background: #fff;
+        margin: 0 25px 50px 25px;
+    }
+
+    .card:first-child {
+        margin-left: 0px;
+    }
+
+
+
+    .card-heading {
+        text-align: left;
+        padding-bottom: 5px;
+        color: black;
+    }
+
+    .card-heading a {
+        text-decoration: none;
+        color: black;
     }
     
-    .about1 {
-        grid-column: 7 / 10;
-        grid-row: auto;
-        margin-top: 100px;
-        padding-top: 60px;
+    .card-heading a:hover {
+        background: var(--main-blue);
+        cursor: pointer;
+    }
+
+    .card-img {
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: left;
+        width: 275px;
+        height: 190px;
+        border: 0.5px solid #ccc;
     }
     
-    .about2 {
-        grid-column: 10 / 13;
-        grid-row: auto;
-        margin-top: 100px;
-        padding-top: 60px;
+    #contact {
+        align-items: left;
+        width: 100%;
+        height: 100vh;
+        margin-top: 600px;
+        padding-top: 6rem;
     }
-    
-    .unwound-img {
-        grid-column: 1 / 4;
-        grid-row: 15/ 19;
+
+    @media screen and (max-width: 800px) {
+        line-height: 1.3;
     }
-    
-    .unwound-text {
-        grid-column: 4 / 7;
-        grid-row: 15 / 19;
-    }
-    
-    .breakfast-img {
-        grid-column: 7 / 10;
-        grid-row: 15 / 19;
-    }
-    
-    .breakfast-text {
-        grid-column: 10 / 13;
-        grid-row: 15 / 19;
-    }
-    
-    .robo-text {
-        grid-column: 1 / 4;
-        grid-row: 19 / 23;
-    }
-    
-    .robo-img {
-        grid-column: 4 / 7;
-        grid-row: 19 / 23;
-    }
-    .grid-text {
-        grid-column: 7 / 10;
-        grid-row: 19 / 23;
-    }
-    
-    .grid-img {
-        grid-column: 10 / 13;
-        grid-row: 19 / 23;
-    }
-    
+
 }
+
