--- a/app/scss/style.css
+++ b/app/scss/style.css
@@ -10,33 +10,11 @@ html {
 }
 
 body {
-  margin: 0;
-  padding: 0;
+  margin: 20px;
+  padding: 20px;
   font-family: 'Poppins', sans-serif;
+  font-size: 16px;
   line-height: 1.3;
-}
-
-body #content {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[12];
-      grid-template-columns: repeat(12, 1fr);
-  grid-auto-rows: 100px;
-  grid-auto-flow: column;
-  grid-row-gap: 10px;
-  grid-column-gap: 10px;
-  grid-gap: 10px;
-  margin: 0 auto;
-}
-
-body #content div {
-  background: #c5f07f;
-  /*   padding: 30px; */
-}
-
-body #content div:nth-child(even) {
-  background: #777;
-  /*   padding: 30px; */
 }
 
 body .nav {
@@ -51,38 +29,35 @@ body .nav {
   left: 0;
   width: 100%;
   background: white;
-  /*   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4); */
-  /*   z-index: 10; */
 }
 
 body .nav-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-right: 1rem;
+  margin: 0 20px 0 20px 0;
   list-style: none;
-  text-decoration: none;
 }
 
-@media (max-width: 28.75em) {
-  body .nav {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  body .nav-list {
-    margin: 0 1rem;
-  }
+body a:link {
+  text-decoration: underline;
+}
+
+body a:hover {
+  text-decoration: none;
 }
 
 body .nav-list a {
   /*   display: block; */
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   padding: 1rem;
+  text-decoration: none;
+  color: black;
 }
 
 body .nav-list a:hover {
   background: var(--main-blue);
+  cursor: pointer;
 }
 
 body #welcome-section {
@@ -101,110 +76,105 @@ body #welcome-section {
           align-items: left;
   width: 100%;
   height: 100vh;
-  padding: 4rem;
+  margin-top: 3rem;
+  font-size: 1.75rem;
 }
 
-body .blank {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 6;
-  grid-column: 1 / 7;
-  -ms-grid-row: 1;
-  -ms-grid-row-span: 6;
-  grid-row: 1 / 7;
-  text-align: right;
-  font-size: 4rem;
-  margin-top: 100px;
-  margin-right: 30px;
-  padding-top: 60px;
+body #about {
+  -webkit-box-align: left;
+      -ms-flex-align: left;
+          align-items: left;
+  width: 100%;
+  height: 100vh;
+  margin-top: 1rem;
+  padding-top: 6rem;
 }
 
-body .about1 {
-  -ms-grid-column: 7;
-  -ms-grid-column-span: 3;
-  grid-column: 7 / 10;
-  grid-row: auto;
-  margin-top: 100px;
-  padding-top: 60px;
+body #projects {
+  width: 100%;
+  padding-top: 6rem;
 }
 
-body .about2 {
-  -ms-grid-column: 10;
-  -ms-grid-column-span: 3;
-  grid-column: 10 / 13;
-  grid-row: auto;
-  margin-top: 100px;
-  padding-top: 60px;
+body .header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 4rem;
+  width: 100%;
+  font-size: 3.5rem;
+  font-style: normal;
+  font-weight: 400;
 }
 
-body .unwound-img {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
-  grid-column: 1 / 4;
-  -ms-grid-row: 15;
-  -ms-grid-row-span: 4;
-  grid-row: 15/ 19;
+body .section-heading {
+  font-size: 1.75rem;
+  font-style: normal;
+  font-weight: 400;
 }
 
-body .unwound-text {
-  -ms-grid-column: 4;
-  -ms-grid-column-span: 3;
-  grid-column: 4 / 7;
-  -ms-grid-row: 15;
-  -ms-grid-row-span: 4;
-  grid-row: 15 / 19;
+body .row {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
-body .breakfast-img {
-  -ms-grid-column: 7;
-  -ms-grid-column-span: 3;
-  grid-column: 7 / 10;
-  -ms-grid-row: 15;
-  -ms-grid-row-span: 4;
-  grid-row: 15 / 19;
+body .card {
+  width: 100%;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  background: #fff;
+  margin: 0 25px 50px 25px;
 }
 
-body .breakfast-text {
-  -ms-grid-column: 10;
-  -ms-grid-column-span: 3;
-  grid-column: 10 / 13;
-  -ms-grid-row: 15;
-  -ms-grid-row-span: 4;
-  grid-row: 15 / 19;
+body .card:first-child {
+  margin-left: 0px;
 }
 
-body .robo-text {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
-  grid-column: 1 / 4;
-  -ms-grid-row: 19;
-  -ms-grid-row-span: 4;
-  grid-row: 19 / 23;
+body .card-heading {
+  text-align: left;
+  padding-bottom: 5px;
+  color: black;
 }
 
-body .robo-img {
-  -ms-grid-column: 4;
-  -ms-grid-column-span: 3;
-  grid-column: 4 / 7;
-  -ms-grid-row: 19;
-  -ms-grid-row-span: 4;
-  grid-row: 19 / 23;
+body .card-heading a {
+  text-decoration: none;
+  color: black;
 }
 
-body .grid-text {
-  -ms-grid-column: 7;
-  -ms-grid-column-span: 3;
-  grid-column: 7 / 10;
-  -ms-grid-row: 19;
-  -ms-grid-row-span: 4;
-  grid-row: 19 / 23;
+body .card-heading a:hover {
+  background: var(--main-blue);
+  cursor: pointer;
 }
 
-body .grid-img {
-  -ms-grid-column: 10;
-  -ms-grid-column-span: 3;
-  grid-column: 10 / 13;
-  -ms-grid-row: 19;
-  -ms-grid-row-span: 4;
-  grid-row: 19 / 23;
+body .card-img {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: left;
+  width: 275px;
+  height: 190px;
+  border: 0.5px solid #ccc;
+}
+
+body #contact {
+  -webkit-box-align: left;
+      -ms-flex-align: left;
+          align-items: left;
+  width: 100%;
+  height: 100vh;
+  margin-top: 600px;
+  padding-top: 6rem;
+}
+
+@media screen and (max-width: 800px) {
+  body {
+    line-height: 1.3;
+  }
 }
 /*# sourceMappingURL=style.css.map */
